# funMin

./: README.md  pyproject.toml  setup.py
funmin/: __init__.py  funmin.py
tests/: test_funmin.py
