[tool.poetry]
name = "funMin"
version = "0.1.0"
description = "Given an array of elements that provide a less than operator."
authors = ["Jonatas Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
jedi = "*"
ipdb = "*"
neovim = "*"
pep8 = "*"
flake8 = "*"
pylint = "*"
mypy = "*"
isort = "*"
autoflake = "*"
pytest-cov = "*"
pytest-watch = "*"
pytest-sugar = "*"
pytest-mock = "*"
prospector = {version = "^1.3.1", extras = ["with_with_pyroma", "with_vulture", "with_frosted", "with_mypy", "with_bandit"]}
black = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 160

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
